# SpinWalk

./: .gitattributes  .readthedocs.yaml  CMakeLists.txt  Dockerfile  Dockerfile_CPU  LICENSE  README.md  microvascular_cpu.cpp  microvascular_cpu_deprecated.cpp  microvascular_gpu.cu
.github/workflows/: CMake.yml  build-and-publish.yml  build-docker.yml  build_cmake.yml  build_docker.yml
GPU/: microvascular_gpu.cu
MATLAB/: filter_spinwalk.m  plot_results.m  read_fieldmap.m  read_spinwalk.m  write_fieldmap.m  write_xyz0.m
Python/: create_fieldmap.py
common/: config_reader.h  helper_cuda.h  kernels.h  miscellaneous.h  reader.h  rotation.h
config/: config_default.ini  create_fieldmap.py  gradient.ini  grase.ini  gre.ini  se.ini  ssfp.ini  stimulated_echo.ini
config/dwi/: dwi_baseline.ini  dwi_x_100.ini  dwi_x_1000.ini  dwi_x_1100.ini  dwi_x_1150.ini  dwi_x_1200.ini  dwi_x_1300.ini  dwi_x_1350.ini  dwi_x_1400.ini  dwi_x_1500.ini  dwi_x_1600.ini  dwi_x_1700.ini  dwi_x_1750.ini  dwi_x_1800.ini  dwi_x_1900.ini  dwi_x_200.ini  dwi_x_2000.ini  dwi_x_2100.ini  dwi_x_2200.ini  dwi_x_2300.ini  dwi_x_2400.ini  dwi_x_2500.ini  dwi_x_2600.ini  dwi_x_2700.ini  dwi_x_2800.ini  dwi_x_2900.ini  dwi_x_300.ini  dwi_x_3000.ini  dwi_x_3100.ini  dwi_x_3200.ini  dwi_x_3300.ini  dwi_x_3400.ini  dwi_x_3500.ini  dwi_x_3600.ini  dwi_x_3700.ini  dwi_x_3800.ini  dwi_x_3900.ini  dwi_x_400.ini  dwi_x_4000.ini  dwi_x_4100.ini  (+17 more)
containers/: Dockerfile  Dockerfile_CPU  apptainer.def  create_dockers.sh  docker_to_apptainer.sh
demo/: spinwalk_bSSFP_profile.ipynb  spinwalk_bold.ipynb  spinwalk_dwi.ipynb  spinwalk_example.ipynb
docs/: requirements.txt
docs/source/: conf.py  create_phantom.rst  file format.rst  index.rst  installation.rst  io_file.rst  tutorial.rst
include/: README.md  barkeep.h  helper_cuda.h  kernels.h  tqdm.h
inputs/: config.ini  config_default.ini  create_fieldmap.py  grase.ini  gre.ini  se.ini  ssfp.ini
inputs/boston/: Boston.ini  Boston_gre.ini  Boston_se.ini  Boston_ssfp.ini  gre_boston.ini  gre_boston_separate.ini  se_boston_separate.ini  ssfp_boston_separate.ini
matlab/: plot_results.m  read_microvascular.m  read_output.m  read_spinwalk.m
others/: plot_seq.py
outputs/: read_microvascular.m  read_output.m  ut.m
python/: create_fieldmap_manual.py
src/: basic_functions.cuh  cylinder.cu  cylinder.cuh  definitions.h  file_utils.cpp  file_utils.h  helper.cuh  kernels.cu  kernels.cuh  miscellaneous.h  reader.h  rotation.cuh  rotation.h  simulation_parameters.h  spinwalk.cpp  spinwalk.cu  version.h
src/config/: CMakeLists.txt  config_generator.cpp  config_generator.h  handler.cpp  handler.h
src/dMRI/: handler.cpp  handler.h  pgse.cpp  pgse.h
src/diff_grad/: CMakeLists.txt  handler.cpp  handler.h  pgse.cpp  pgse.h
src/dwi/: CMakeLists.txt  handler.cpp  handler.h  pgse.cpp  pgse.h
src/phantom/: CMakeLists.txt  handler.cpp  handler.h  phantom_base.cpp  phantom_base.h  phantom_cylinder.cpp  phantom_cylinder.h  phantom_ply.cpp  phantom_ply.h  phantom_sphere.cpp  phantom_sphere.h  phantom_twopools.cpp  phantom_twopools.h
src/shapes/: cylinder.cpp  cylinder.cu  cylinder.cuh  cylinder.h  shape_base.cpp  shape_base.cu  shape_base.cuh  shape_base.h  sphere.cpp  sphere.cu  sphere.cuh  sphere.h
src/sim/: CMakeLists.txt  config_reader.cpp  config_reader.h  device_helper.cu  device_helper.cuh  h5_helper.h  handler.cu  handler.cuh  host_device_array.cuh  kernels.cu  kernels.cuh  monte_carlo.cu  monte_carlo.cuh  simulation_parameters.cuh
tests/: CMakeLists.txt  create_apptainer.sh  create_config.sh  create_dockers.sh  create_phantom.sh  plot_results.m  test_config.cpp  test_docker.sh  test_kernel.cpp  test_phantom.cpp  test_sim.cu  ut.m  ut.sh
